Fri Jan  5 22:21:08 2007  Koichi Sasada  <ko1@atdot.net>

	* benchmark/bm_app_pentomino.rb : use Array#dup instead of
	Array#clone

	* benchmark/bmx_temp.rb : removed

	* benchmark/run.rb : use run.rb instead of run_rite.rb

	* common.mk : ditto

	* benchmark/run_rite.rb : removed

	* common.mk : use $(srcdir)/test.rb to run a test program
	with "make run"

	* benchmark/bmx_temp.rb : removed and
	set svn:ignore (bmx_*.rb) to benchmark/

	* test.rb : set svn:ignore

Fri Jan  5 21:03:08 2007  Koichi Sasada  <ko1@atdot.net>

	* yarvtest/yarvtest.rb : fix to compare results

Fri Jan  5 20:52:56 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c, compile.h : add ADD_CALL_RECEIVER() macro.

	* insns.def (send) : use GET_SELF() direct if FCALL.

	* eval.c (rb_f_send) : check method dispatch type to permit
	invoking private method when dispatch type is FCALL/VCALL

	* insns.def (opt_ltlt) : remove useless statement.

	* vm.h : remove unused macros.

Fri Jan  5 20:50:31 2007  Koichi Sasada  <ko1@atdot.net>

	* benchmark/run_rite.rb : fix to use readlines instead of
	read(...).lines (because 1.8 doesn't have String#lines).

Fri Jan  5 20:28:19 2007  Koichi Sasada  <ko1@atdot.net>

	* thread_win32.ci (rb_thread_reset_timer_thread) :
	added ([ruby-dev:30086]).

Fri Jan  5 20:20:36 2007  Koichi Sasada  <ko1@atdot.net>

	* common.mk : add .SUFFIXES rule

Fri Jan  5 15:58:15 2007  Koichi Sasada  <ko1@atdot.net>

	* eval_method.h (rb_alias) : fix to check search result

Fri Jan  5 13:59:53 2007  Koichi Sasada  <ko1@atdot.net>

	* eval_method.h (rb_add_method) : fix to check old_node

Fri Jan  5 12:03:07 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_compile_each, set_block_local_tbl) : 
	support NODE_LAMBDA (partly).

	* sample/test.rb : restore test of NODE_LAMBDA

	* test/ruby/test_lambda.rb : ditto

Fri Jan  5 12:31:23 2007  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* thread_pthread.ci (native_sleep): fix tv_nsec overflow.
