@@ -1,3 +1,9 @@
+Sat Jan  6 03:49:22 2007  Koichi Sasada  <ko1@atdot.net>
+
+	* benchmark/run.rb : change option format
+
+	* common.mk : ditto
+
 Fri Jan  5 22:21:08 2007  Koichi Sasada  <ko1@atdot.net>
 
 	* benchmark/bm_app_pentomino.rb : use Array#dup instead of
